[package]
name = "syn-serde"
version = "0.2.2"
authors = ["David Tolnay <dtolnay@gmail.com>", "Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/syn-serde"
documentation = "https://docs.rs/syn-serde"
keywords = ["serde", "serialization", "syn"]
categories = ["development-tools::procedural-macro-helpers", "encoding"]
exclude = ["/.*", "/tools"]
description = """
Library to serialize and deserialize Syn syntax trees.
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [
    "examples/json2rust",
    "examples/rust2json",
    "examples/rust2pickle",
    "tests/doc",
    "tools/codegen",
]

[features]
json = ["serde_json"]

# Note: proc-macro2, serde, serde_json, and syn are public dependencies.
[dependencies]
proc-macro2 = { version = "1", default-features = false }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = { version = "1", optional = true }
syn = { version = "1.0.44", default-features = false, features = ["full"] }

[dev-dependencies]
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
