[package]
name = "syn-serde"
version = "0.2.3"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/syn-serde"
keywords = ["serde", "serialization", "syn"]
categories = ["development-tools::procedural-macro-helpers", "encoding", "parser-implementations"]
exclude = ["/.*", "/tools"]
description = """
Library to serialize and deserialize Syn syntax trees.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"
members = [
    "examples/json2rust",
    "examples/rust2json",
    "examples/rust2pickle",
    "tests/doc",
    "tools/codegen",
]

[lib]
doc-scrape-examples = false

[features]
json = ["serde_json"]

# Note: proc-macro2, serde, serde_json, and syn are public dependencies.
[dependencies]
proc-macro2 = { version = "1", default-features = false }
serde = { version = "1.0.103", features = ["derive"] }
syn = { version = "1.0.98", default-features = false, features = ["full"] }

serde_json = { version = "1", optional = true }

[dev-dependencies]
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
