[package]
name = "syn-serde-internal-codegen"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Nika Layzell <nika@thelayzells.com>", "Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false # this is an internal crate which should never be published

[workspace]
# Prefer that `cargo clean` in syn-serde's directory does not require a rebuild of
# rustfmt in the codegen directory.

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rustfmt = { package = "rustfmt-nightly", git = "https://github.com/rust-lang-nursery/rustfmt" }
serde_json = "1.0"
syn-codegen = { git = "https://github.com/dtolnay/syn" }
