[package]
name = "syn-serde-internal-codegen"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Nika Layzell <nika@thelayzells.com>", "Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false # this is an internal crate which should never be published

[dependencies]
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn-codegen = { git = "https://github.com/dtolnay/syn" }
tempfile = "3.1"
