[package]
name = "syn-serde-internal-codegen"
edition = "2021"

[dependencies]
anyhow = "1"
fs-err = "2"
globset = { version = "0.4", default-features = false }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde_json = "1"
syn = { version = "2", default-features = false, features = ["parsing", "printing", "clone-impls", "full"] }
syn-codegen = "0.4"

[lints]
workspace = true
