[package]
name = "syn-serde-internal-codegen"
edition = "2021"

[dependencies]
fs-err = "3"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde_json = "1"
syn-codegen = "0.4"
test-helper = { features = ["codegen"], git = "https://github.com/taiki-e/test-helper.git", rev = "c78a65c" }

[lints]
workspace = true
