[package]
name = "syn-serde-internal-codegen"
edition = "2021"

[dependencies]
fs-err = "3"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde_json = "1"
syn-codegen = "0.4"
test-helper = { features = ["codegen"], git = "https://github.com/taiki-e/test-helper.git", rev = "82e3b012a49fb16587e165986674290ef682a5b0" }

[lints]
workspace = true
